changed according to our needs and project structure.

--- a/BharaHobe/templates/base.html
+++ b/BharaHobe/templates/base.html
@@ -37,10 +37,10 @@
             <div class="container">
 
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <img class="img-fluid rounded-circle" src="{% static 'projects/images/logo.jpg' %}" alt=""
+                    <img class="img-fluid rounded-circle" src="{% static 'rentapp/images/logo.jpg' %}" alt=""
                         width="40" height="30">
                 </a>
-                <a class="navbar-brand fs-4 text-info" href="{% url 'home' %}">Argon</a>
+                <a class="navbar-brand fs-4 text-info" href="{% url 'home' %}">Bhara Hobe</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -51,16 +51,16 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#features">Features</a>
+                            <a class="nav-link text-white" href="#features">Products</a>
                         </li>
                         <li class="nav-item">
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-white" href="#">Download</a>
-                        </li>
-                        <li class="nav-item">
+                        </li> -->
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-white" href="#pricing">Packages</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">Reviews</a>
                         </li>
@@ -83,7 +83,7 @@
                             <a class="nav-link text-white" href="{% url 'profile' %}">{{ user.username }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'add-project' %}">Add Project</a>
+                            <a class="nav-link text-white" href="{% url 'add-project' %}">Add Product</a>
                         </li>
 
                         <li class="nav-item">
@@ -162,10 +162,10 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3 text-secondary"></i>Argon
+                            </i>Bhara Hobe
                         </h6>
                         <p>
-                            The best place to organize your project.
+                            Rent you unused products and earn extra cash!
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -174,19 +174,19 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Products
+                            Top Products
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Angular</a>
+                            <a href="#!" class="text-reset">Furniture</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">React</a>
+                            <a href="#!" class="text-reset">Book</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Vue</a>
+                            <a href="#!" class="text-reset">Decoration</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Laravel</a>
+                            <a href="#!" class="text-reset">Car</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -201,7 +201,7 @@
                             <a href="#!" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Settings</a>
+                            <a href="#!" class="text-reset">Return Policy</a>
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Orders</a>
@@ -216,14 +216,13 @@
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3 text-secondary"></i> Jahangirnagar
+                        <p>CSE Deptartment, Jahangirnagar
                             University, Savar, Dhaka.</p>
                         <p>
-                            <i class="fas fa-envelope me-3 text-secondary"></i>
-                            sabarahman.official@gmail.com
+                            ju_high_five@gmail.com
                         </p>
 
-                        <p><i class="fas fa-print me-3 text-secondary"></i> +8801730850444</p>
+                        <p><i class="fas fa-print me-3 text-secondary"></i> +8801758311555</p>
                     </div>
                     <!-- Grid column -->
                 </div>
@@ -234,8 +233,8 @@
 
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-            © 2022 Copyright:
-            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">argon.com.bd</a>
+            © 2024 Copyright:
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">bharahobe.com.bd</a>
         </div>
         <!-- Copyright -->
     </footer>
