--- a/BharaHobe/templates/rentapp/home.html
+++ b/BharaHobe/templates/rentapp/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Argon - Home
+Bhara Hobe - Home
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,9 @@ Argon - Home
 </head>
 
 <body>
-    Project body
+    <div class="">
+
+    </div>
 </body>
 
 </html>
