--- a/BharaHobe/templates/base.html
+++ b/BharaHobe/templates/base.html
@@ -36,10 +36,10 @@
         <nav class="navbar navbar-expand-lg  bg-dark text-muted">
             <div class="container">
 
-                <a class="navbar-brand" href="{% url 'home' %}">
-                    <img class="img-fluid rounded-circle" src="{% static 'rentapp/images/logo.jpg' %}" alt=""
-                        width="40" height="30">
-                </a>
+                <!-- <a class="navbar-brand" href="{% url 'home' %}">
+                    <img class="img-fluid rounded-circle" src="{% static 'rentapp/images/logo.jpg' %}" alt="" width="40"
+                        height="30">
+                </a> -->
                 <a class="navbar-brand fs-4 text-info" href="{% url 'home' %}">Bhara Hobe</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -51,7 +51,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#features">Products</a>
+                            <a class="nav-link text-white" href="#">Products</a>
                         </li>
                         <li class="nav-item">
                         </li>
@@ -67,24 +67,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'make_payment' %}">Make Payment</a>
+                        </li>
 
 
 
                     </ul>
 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Search</button>
-                        </form>
+                    <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
+                                <form class="d-flex" role="search">
+                                    <input class="form-control me-2" type="search" placeholder="Search"
+                                        aria-label="Search">
+                                    <button class="btn btn-outline-light" type="submit">Search</button>
+                                </form>
 
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'profile' %}">{{ user.username }}</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'add-project' %}">Add Product</a>
-                        </li>
+                                {% if user.is_authenticated %}
 
                         <li class="nav-item">
                             <a class="nav-link hover1 text-white" href="{% url 'logout' %}">Logout</a>
