--- a/BharaHobe/payment/templates/payment_success.html
+++ b/BharaHobe/payment/templates/payment_success.html
@@ -6,8 +6,9 @@
 <body>
     <h1>Payment Successful!</h1>
     <p>Payment ID: {{ payment.id }}</p>
-    <p>Order ID: {{ payment.order_id }}</p>
-    <p>Amount: {{ payment.amount }}</p>
-    <p>Timestamp: {{ payment.timestamp }}</p>
+    <p>Order ID: {{ payment.m_order_id }}</p>
+    <p>Amount: {{ payment.m_amount }}</p>
+    <p>Timestamp: {{ payment.m_timestamp }}</p>
+    <button>Checkout</button>
 </body>
 </html>
