--- a/BharaHobe/templates/base.html
+++ b/BharaHobe/templates/base.html
@@ -83,7 +83,7 @@
                             <a class="nav-link text-white" href="{% url 'profile' %}">{{ user.username }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'add-project' %}">Add Product</a>
+                            <a class="nav-link text-white" href="#">Add Product</a>
                         </li>
 
                         <li class="nav-item">
