Three selection options(advance, monthly, EMI) and their corresponding basic form added

--- a/BharaHobe/templates/base.html
+++ b/BharaHobe/templates/base.html
@@ -68,7 +68,7 @@
                             <a class="nav-link text-white" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="{% url 'make_payment' %}">Make Payment</a>
+                            <a class="nav-link text-white" href="{% url 'select_payment_method' %}">Make Payment</a>
                         </li>
 
 
