Created Order Model to insert some dummy orders

--- a/BharaHobe/payment/templates/payment_success.html
+++ b/BharaHobe/payment/templates/payment_success.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>Payment Successful!</h1>
-    <p>Payment ID: {{ payment.id }}</p>
     <p>Order ID: {{ payment.m_order_id }}</p>
+    <!-- <p>Payment ID: {{ payment.id }}</p>
     <p>Amount: {{ payment.m_amount }}</p>
     <p>Timestamp: {{ payment.m_timestamp }}</p>
-    <button>Checkout</button>
+    <button>Checkout</button> -->
 </body>
 </html>
