--- a/BharaHobe/templates/app_rentApproval/approved_requests.html
+++ b/BharaHobe/templates/app_rentApproval/approved_requests.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <h1 style="text-align: center; color: #093a00; font-family: 'Arial', sans-serif; font-size: 24px; margin-bottom: 20px;">Approved Requests</h1>
+    <h1 style="text-align: left; color: #093a00; font-family: 'Arial', sans-serif; font-size: 30px; margin-bottom: 20px;">Approved Requests</h1>
 </div>
 <div>
     <table class="table table-bordered table-striped">
